# SimplePhysics

./: README.md  pyproject.toml
app/: draw.py  geometry.py  main.py  physics.py
app/examples/: ball.py  box.py  cloth.py  double_pendulum.py
