[tool.poetry]
name = "simplephysics"
version = "0.1.0"
description = "Simple physics engine using verlet integration"
authors = ["Chandan Prasad M <prasadchandan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "^1.3.1"
numpy = "^1.22.1"
rich = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
